@@ -29,7 +29,10 @@ public class GPUClientYamlTestSuiteIT extends ESClientYamlSuiteTestCase {
             .nodes(1)
             .module("gpu")
             .setting("xpack.license.self_generated.type", "trial")
-            .setting("xpack.security.enabled", "false");
+            .setting("xpack.security.enabled", "false")
+            // Needed to get access to raw vectors from Lucene scorers
+            .jvmArg("--add-opens=org.apache.lucene.core/org.apache.lucene.codecs.lucene99=org.elasticsearch.server")
+            .jvmArg("--add-opens=org.apache.lucene.core/org.apache.lucene.internal.vectorization=org.elasticsearch.server");
 
         var libraryPath = System.getenv("LD_LIBRARY_PATH");
         if (libraryPath != null) {
